--- a/_posts/coding/2017-02-15-iconfont.md
+++ b/_posts/coding/2017-02-15-iconfont.md
@@ -28,7 +28,7 @@ category: coding
   -webkit-font-smoothing: antialiased;
 }
 ```
-其实最重要的是`font-family: 'Material Icons';``和`-webkit-font-feature-settings: 'liga';`，前者声明了使用Material Icons作为字体，后者则启用了连字特性。  
+其实最重要的是`font-family: 'Material Icons';`和`-webkit-font-feature-settings: 'liga';`，前者声明了使用Material Icons作为字体，后者则启用了连字特性。  
 
 ![](../../images/myblog/lianzifu.png)  
 注意，由于启用了连字特性，所以针对输入`fi`不再分别输出`f`和`i`的字形，而是输出fi的连字字形。
