--- a/_posts/coding/2017-02-15-iconfont.md
+++ b/_posts/coding/2017-02-15-iconfont.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: iconfont的一个使用方式
-description: Github本身就是不错的代码社区，他也提供了一些其他的服务，比如Github Pages，使用它可以很方便的建立自己的独立博客，并且免费。
+title: Material Icons 的一个使用方式
+description: Material Icons 是一个材料图标设计精美、令人愉快的和容易使用在您的web,Android和iOS项目 网站https://material.io/icons/
 category: coding
 ---
 
