--- a/_posts/coding/2017-02-19-flex.md
+++ b/_posts/coding/2017-02-19-flex.md
@@ -41,8 +41,8 @@ category: coding
 
 父容器属性  
 
-| 属性        | 作用           | 特性分类  |
-| ------------- |:-------------:| -----:|
+属性|作用|特性分类
+-|-|-
 | flex-direction | 定义子项在容器内的排列方向 | 排列 |
 | flex-wrap      | 定义子项在容器内的换行效果 | 排列 |
 | flex-flow | flex-direction和flex-wrap的复合属性 | 排列 |
