--- a/_posts/coding/2017-02-19-flex.md
+++ b/_posts/coding/2017-02-19-flex.md
@@ -42,13 +42,11 @@ category: coding
 父容器属性  
 
 属性|作用|特性分类
--|-|-
-| flex-direction | 定义子项在容器内的排列方向 | 排列 |
-| flex-wrap      | 定义子项在容器内的换行效果 | 排列 |
-| flex-flow | flex-direction和flex-wrap的复合属性 | 排列 |
-| justify-content | 定义子项在容器内水平对齐方式 | 对齐 |
-| align-items | 定义子项在容器内垂直对齐方式 | 对齐 |
-| align-content | 定义多行子项在容器内整体垂直对齐方式 | 对齐 |  
+| Tables        | Are           | Cool  |
+| ------------- |:-------------:| -----:|
+| col 3 is      | right-aligned | $1600 |
+| col 2 is      | centered      |   $12 |
+| zebra stripes | are neat      |    $1 |
 
 
 子项属性
