--- a/_posts/coding/2017-02-19-flex.md
+++ b/_posts/coding/2017-02-19-flex.md
@@ -41,14 +41,41 @@ category: coding
 
 父容器属性  
 
-属性|作用|特性分类
+属性  作用  特性  分类  
+
 
 * flex-direction  定义子项在容器内的排列方向  排列
 * flex-wrap      定义子项在容器内的换行效果  排列
 * flex-flow  flex-direction和flex-wrap的复合属性  排列
 * justify-content  定义子项在容器内水平对齐方式  对齐
 * align-items  定义子项在容器内垂直对齐方式  对齐
-* align-content  定义多行子项在容器内整体垂直对齐方式  对齐  
+* align-content  定义多行子项在容器内整体垂直对齐方式  对齐    
 
 
-子项属性
+子项属性  
+
+* 属性	作用	特性分类  
+
+
+* order	定义子项们的排列顺序	排列
+* flex-grow	定义子项宽度之和不足父元素宽度时，子项拉伸的比例	占地面积
+* flex-shrink	定义子项宽度之和超过父元素宽度时，子项缩放的比例	占地面积
+* flex-basis	定义子项的初始宽度，若子项宽度之和超过父元素宽度时，子项按照flex-basis的比例缩放	占地面积
+* align-self	定义单个子项与其他项目不一样的对齐方式	对齐  
+
+### 三、图解父容器的属性
+
+我们逐一来看看效果，先来看看父元素的属性（不要忘了我们已经在父元素上加上了display:flex哦，下面为了更直观对比隐藏了这个设置）  
+
+##### flex-direction属性  
+
+定义子项在容器内的排列方向  
+
+```
+.parent {
+  flex-direction: row | row-reverse | column | column-reverse;
+}
+```  
+
+
+![](../../images/myblog/111111.png) 
