--- a/_posts/coding/2017-05-17-weixin.md
+++ b/_posts/coding/2017-05-17-weixin.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: sendcloud和nodemailer的配合使用
-description:  SendCloud由搜狐武汉研发中心孵化的项目，是致力于为开发者提供高质量的触发邮件服务的云端邮件发送平台，为开发者提供便利的API接口来调用服务，让邮件准确迅速到达用户收件箱并获得强大的追踪数据。
+title: 微信第三方登陆
+description: 接入微信开放平台，让你的网站支持使用微信帐号来登录: 了解更多 ... 第三方平台开发: 成为第三方平台，为广大公众号提供运营服务和行业解决方案 ...
 category: coding
 ---
 ### 1、OAuth2.0简介  
