--- a/_posts/coding/2017-05-17-weixin.md
+++ b/_posts/coding/2017-05-17-weixin.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 微信第三方登陆
-description: 接入微信开放平台，让你的网站支持使用微信帐号来登录: 了解更多 ... 第三方平台开发: 成为第三方平台，为广大公众号提供运营服务和行业解决方案 ...
+description: 接入微信开放平台，让你的网站支持使用微信帐号来登录: 了解更多 ... 第三方平台开发: 成为第三方平台，为广大公众号提供运营服务和行业解决方案
 category: coding
 ---
 ### 1、OAuth2.0简介  
